--- a/SaveMyTime/View/MainWindow.xaml
+++ b/SaveMyTime/View/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SaveMyTime"
         mc:Ignorable="d"
         xmlns:ViewModel="clr-namespace:SaveMyTime.Viewmodel"
         Title="Save My Time" Height="550" Width="450" WindowStartupLocation="CenterScreen" WindowState="Minimized">
@@ -18,7 +17,12 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
+        
+        <Label Content="{Binding CurrentTime}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" FontWeight="Bold"/>
     </Grid>
 </Window>
